--- a/index.html
+++ b/index.html
@@ -277,17 +277,17 @@
                 >
               </h3>
             </div>
-            <!-- <div class="project-box" >
-              <i class="uil uil-users-alt"></i>
+            <div class="project-box" >
+              <i class="uil uil-chart-bar"></i>
               <h3 class="project-headers">
                 <a
                   class="links"
-                  href="https://github.com/yashpsc"
-                  target="_blank"
-                  >Dymaxa Recruitment Redesign[WIP]</a
+                  href="https://yashpsc.github.io/pearmations-comingsoon/"
+                  target="_blank" rel="noopener"
+                  >Pearmations Website (coming soon)</a
                 >
               </h3>
-            </div> -->
+            </div>
           </div>
         </section>
 
