--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             <h1>Personal Project</h1>
           </div>
           <div class="project-container">
-            <div class="project-box">
+            <div class="project-box" onclick="getProjectLink(5)">
               <i class="uil uil-capture"></i>
               <h3 class="project-headers">
                 <a
@@ -287,7 +287,7 @@
                 >
               </h3>
             </div>
-            <div class="project-box">
+            <div class="project-box" onclick="getProjectLink(6)">
               <i class="uil uil-shutter-alt"></i>
               <h3 class="project-headers">
                 <a
@@ -298,7 +298,7 @@
                 >
               </h3>
             </div>
-            <div class="project-box" >
+            <div class="project-box" onclick="getProjectLink(7)">
               <i class="uil uil-chart-bar"></i>
               <h3 class="project-headers">
                 <a
